# schedool

./: .hgignore  Class.hs  Fetch.hs  LICENSE.txt  Main.hs  Parse.hs  Parser.hs  Schedmaster.cabal  Schedool.cabal  Section.hs  Time.hs  browsetest.hs  courses.html  cs.html  design-notes.txt  english.html  sections.hs
cache/: accounting.html  anthropology.html  art history.html  biology.html  business computing systems.html  chemical engineering.html  chemistry.html  civil engineering.html  community college.html  computer science & engineering.html  earth science.html  economics.html  education.html  electrical engineering.html  engineering management.html  engineering science.html  english.html  environmental science.html  explosives engineering.html  finance.html  fine arts.html  geochemistry.html  geology.html  geophysics.html  history.html  humanities.html  hydrology.html  materials engineering.html  mathematics.html  mechanical engineering.html  mineral engineering.html  music.html  petroleum engineering.html  philosophy.html  physical recreation.html  physics.html  political science.html  psychology.html  science teaching.html  social science.html  (+2 more)
src/: Fetch.hs  Overlap.hs  Parse.hs  Schedule.hs  Section.hs  Time.hs  Utility.hs  courses.html  departments.hs  sections.hs
src/SchedQL/: Main.hs
src/SchedRest/: Main.hs
src/SchedServer/: Common.hs  Main.hs
src/SchedXmlParser/: course.hs  sched.xml
src/Schedool/: Cache.hs  Data.hs  Fetch.hs  Mirror.hs  Overlap.hs  Parse.hs  Query.hs  Schedule.hs  Section.hs  Time.hs  Utility.hs  XmlParse.hs
src/WebSched/: Pages.hs  Render.hs
src/cache/: accounting.html  aerospace engineering.html  air force aerospace studies.html  anthropology.html  art history.html  business administration.html  business computing systems.html  community college.html  earth science.html  economics.html  education.html  electrical engineering.html  engineering management.html  engineering science.html  english.html  environmental engineering.html  environmental science.html  exchange.html  explosives engineering.html  finance.html  fine arts.html  french.html  geochemistry.html  geology.html  geophysics.html  history.html  humanities.html  hydrology.html  information technology.html  management.html  marketing.html  materials engineering.html  mathematics.html  mechanical engineering.html  music.html  philosophy.html  physics.html  political science.html  psychology.html  social science.html  (+2 more)
