Name: Schedool
Description: A set of utilities for finding class schedules without conflicting times.
Version: 0.0.1
Cabal-Version: >=1.2
Build-Type: Simple
License: BSD3
License-File: LICENSE.txt
Copyright:
Maintainer: Daniel Lyons <fusion@storytotell.org>
Category: Education
Synopsis: A tool for downloading and creating non-conflicting class schedules.
Author: Daniel Lyons

Executable schedql
  Build-Depends: HTTP, base >= 4 && < 5, array >= 0.4.0.0 && < 0.5, network,
                 regex-posix, tagsoup >= 0.12.8 && < 0.13, parsec, containers >= 0.5.0.0 && < 0.6,
                 filepath, directory, happstack-lite >= 7.3 && < 7.4, json >= 0.7 && < 0.8

  Hs-Source-Dirs: src
  Main-Is: SchedQL/Main.hs
